<resources>
    <string name="app_name">PDF Scanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="documents">Documents</string>
    <string name="clear_recent">Clear recent</string>
    <string name="print">Print</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="removed_from_recent">Removed from recent</string>
    <string name="permanently_delete_file">Permanently delete file?</string>
    <string name="rename_file">Rename file</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="share_this_file_via">Share this file via</string>
    <string name="all_documents">All documents</string>
    <string name="stared">Starred</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="share_this_app">Share this app</string>
    <string name="download_more_apps">Download more apps</string>
    <string name="about">About</string>
    <string name="tools">Tools</string>
    <string name="scan">Scan</string>
    <string name="extracting_wait">Extracting Please wait…</string>
    <string name="extracted_to">Extracted to </string>
    <string name="saved_to">Saved to </string>
    <string name="saving_wait">Saving Please wait…</string>
    <string name="preparing_wait">Preparing Please wait…</string>
    <string name="select">Select</string>
    <string name="selected">selected</string>
    <string name="pdf_tools">PDF tools</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="select_file">Select a file</string>
    <string name="edit_metadata">Edit metadata</string>
    <string name="save">Save</string>
    <string name="loading_wait">Loading Please wait…</string>
    <string name="compressing_wait">Compressing Please wait…</string>
    <string name="saved">Saved</string>
    <string name="organize_pages">Organize Pages</string>
    <string name="organize_files">Organize Files</string>
    <string name="merge_failed">Failed to merge. One or more files are corrupt or password protected</string>
    <string name="file_manager_not_found">File manager not found!</string>
    <string name="recent_cleared">Recent cleared.</string>
    <string name="at_least_two_files">You need at least two files to merge.</string>
    <string name="remove">Remove</string>
    <string name="grid_view">Grid view</string>
    <string name="list_view">List view</string>
    <string name="_2_columns">2 columns</string>
    <string name="_3_columns">3 columns</string>
    <string name="_4_columns">4 columns</string>
    <string name="_5_columns">5 columns</string>
    <string name="_6_columns">6 columns</string>
    <string name="share_as_picture">Share as picture</string>
    <string name="robert_londo">Robert Londo</string>
    <string name="version">Version</string>
    <string name="developed_by">Developed by Robert Londo</string>
    <string name="unable_to_find_play_store">Unable to find Play Store</string>
    <string name="install">Install</string>
    <string name="privacy_policy_link"><a href='https://all-pdf.firebaseapp.com'>Privacy Policy</a></string>
    <string name="chooser_title">Share All PDF app via</string>
    <string name="all_pdfs_from_your_device_will_appear_here">All PDFs from your device will appear here</string>
    <string name="tap_and_hold_on_a_pdf_for_more_options">Tap and hold on a PDF for more options</string>
    <string name="exit_app_has_no_permission">This app can\'t run because it does not have the read and write permissions.  The app will now exit.</string>
    <string name="splitting">Splitting…</string>
    <string name="done">Done!</string>
    <string name="open_file">Open file</string>
    <string name="converting">Converting…</string>
    <string name="compressing">Compressing…</string>
    <string name="merging">Merging…</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="failed_to_rename_file">Failed to rename file</string>
    <string name="compression_level">Compression Level</string>
    <string name="hundred_percent">100%</string>
    <string name="open_directory">Open directory</string>
    <string name="extracting">Extracting…</string>
    <string name="extract">Extract</string>
    <string name="image_quality">Image quality</string>
    <string name="organizing">Organizing…</string>
    <string name="drag_drop_to_organize">Drag and drop to organize pages. Click on a page to delete</string>
    <string name="drag_drop_to_organize_files">Drag and drop to organize files. Click on a file to delete</string>
    <string name="no_enough_disk_space">Can\'t save file, no enough disk space</string>
    <string name="recent_pdfs_will_appear_here">Recent PDFs will appear here</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="creator">Creator</string>
    <string name="producer">Producer</string>
    <string name="subject">Subject</string>
    <string name="keywords">Keywords</string>
    <string name="no_stared_pdfs">No starred PDFs</string>
    <string name="to_add_stared_pdfs_click_star_icon_in_the_pdf_list">To add starred PDFs click star icon in the PDF list</string>
    <string name="cant_share_file">Can\'t share file</string>
    <string name="device_does_not_support_printing">Your device does not support printing</string>
    <string name="remove_ads">Remove ads</string>
    <string name="dont_like_ads">Don\'t like the ads?</string>
    <string name="sort">Sort</string>
    <string name="by_name">By name</string>
    <string name="by_date_modified">By date modified</string>
    <string name="by_size">By size</string>
    <string name="cant_compress_low_memory">Can\'t compress. Low memory!</string>
    <string name="file_protected">File protected</string>
    <string name="file_protected_unprotect">The file is protected, please unprotect</string>
    <string name="location">Location</string>
    <string name="created_date">Created date</string>
    <string name="modified_date">Modified date</string>
    <string name="unknown">Unknown</string>
    <string name="reduced_from">Reduced from</string>
    <string name="to">to</string>
    <string name="from">From</string>
    <string name="at">At</string>
    <string name="number_of_pages">Number of pages in this file</string>
    <string name="split_pdf">Split PDF</string>
    <string name="invalid_value">Invalid value</string>
    <string name="compress">Compress</string>
    <string name="extraction_failed">Extraction failed</string>
    <string name="click_on_pages_you_want_to_extract">Click on a page to select pages you want to extract</string>
    <string name="select_at_least_one_page">Please select at least one page</string>
    <string name="select_pages">Select pages</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="no_proper_app_for_opening_text">You may not have a proper app for opening text files</string>
    <string name="select_images">Select images</string>
    <string name="select_at_least_one_image">Please select at least one image</string>
    <string name="get_pro_version">Get PRO version</string>
    <string name="no_ads">No Ads</string>
    <string name="access_all_premium_features">Access all premium features</string>
    <string name="get_pro_version_to_use_all_features">Get pro version to access all features</string>
    <string name="premium_feature">Premium Feature</string>
    <string name="rate_us_details">If you like this app, Please take few seconds to rate 5 stars on Google Play. It helps me a lot.</string>
    <string name="not_interested">Not interested</string>
    <string name="later">Later</string>
    <string name="rate">Rate</string>
    <string name="cant_load_metadata">Can\'t load metadata</string>
    <string name="cant_print_malformed_or_password">Can\'t print PDF. The file is either malformed, or password protected.</string>
    <string name="cant_print_password_protected">Can\'t print PDF. The file is password protected.</string>
    <string name="failed_low_memory">Failed! low memory</string>
    <string name="browse_files">Browse files</string>
    <string name="items">items</string>
    <string name="no_pdf_files_in_this_directory">No PDF files in this directory</string>
    <string name="cant_print_password_protected_pdf">Cannot print a password protected PDF file</string>
    <string name="cannot_print_malformed_pdf">Cannot print a malformed PDF file</string>
    <string name="cannot_print_unknown_error">Cannot print PDF file, Unknown error has occurred</string>
    <string name="cannot_load_pdf_files">Cannot load PDF files</string>
    <string name="failed">Failed</string>

    <string name="general">General</string>
    <string name="reading">Reading</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="swipe_vertical">Swipe vertical</string>
    <string name="swipe_horizontal">Swipe horizontal</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="page">Page</string>
    <string name="bookmark_added">bookmark added</string>
    <string name="enter_title">Enter title</string>
    <string name="contents">Contents</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="pdf_file_has_no_contents">PDF file has no contents</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="light_mode">Light mode</string>

    <string name="document_scann_lib_name" translatable="false">ScanLibrary</string>
    <string name="finish">Finish</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="cant_crop">Can\'t crop the image, change the points</string>
    <string name="transforming">Transforming...</string>

    <string name="mode_none">None</string>
    <string name="mode_black_white">Black &amp; White</string>
    <string name="mode_magic">Magic</string>
</resources>
