<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tz.co.wadau.documentscanner.StarredPDFActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_stared"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/stared" />

        <tz.co.wadau.documentscanner.ui.MaterialSearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_stared"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <LinearLayout
            android:id="@+id/empty_state_recent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorEmptyStateBg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-104dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_empty_state_stared" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/no_stared_pdfs"
                    android:textColor="@color/colorEmptyStateTextPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/to_add_stared_pdfs_click_star_icon_in_the_pdf_list" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
