<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="tz.co.wadau.documentscanner.EditMetadataActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_metadata"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/edit_metadata" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="?attr/listPreferredItemPaddingLeft"
            android:paddingRight="?attr/listPreferredItemPaddingRight"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_title" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_author" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/author"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_creator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/creator"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="56dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_producer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/producer"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_subject" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subject"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_keywords" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/keywords"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/ic_date" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/created_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:background="@android:color/transparent"
                        android:hint="@string/created_date"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="4dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/modified_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:background="@android:color/transparent"
                        android:hint="@string/modified_date"
                        android:imeOptions="flagNoExtractUi"
                        app:backgroundTint="@color/colorSeparator"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
